compiler/testData/diagnostics/tests/redeclarations/RedeclaredTypeParameters.fir.kt
fun <<!REDECLARATION!>T<!>, <!REDECLARATION!>T<!>> Pair() {}

class P<<!REDECLARATION!>T<!>, <!REDECLARATION!>T<!>> {}

val <<!REDECLARATION!>T<!>, <!REDECLARATION!>T<!>> T.foo : Int
    get() = 1
